Updates for new tenant

--- a/privileged_identity_management_standardised_approvals.json
+++ b/privileged_identity_management_standardised_approvals.json
@@ -3,7 +3,7 @@
     "contentVersion": "1.0.0.0",
     "variables": {
         "publisher": "Azure Citadel",
-        "name": "Standard Managed Service",
+        "name": "Standard Managed Service with PIM",
         "guid": "[guid(concat(variables('publisher'), variables('name')))]",
         "roleDefinitionId": {
             "Contributor": "b24988ac-6180-42a0-ab88-20f7382dd24c",
@@ -15,26 +15,22 @@
             "SupportRequestContributor": "cfd33db0-3dd1-45e3-aa9d-cdbdf3b6f24e"
         },
         "securityGroup": {
-            "admins": {
-                "objectId": "b3333b16-f8de-4624-ad57-52b494d82fc4",
-                "name": "Azure Lighthouse Admins"
-            },
             "consultants": {
-                "objectId": "11a297dd-edbf-49b6-a935-968f147415e1",
+                "objectId": "30f86a83-b2a9-477a-90d6-23e51042839a",
                 "name": "Managed Service Consultants"
             },
-            "approvers": {
-                "objectId": "936bca55-35a6-420b-82ec-4396682004cc",
-                "name": "Managed Service Team Leaders"
+            "management": {
+                "objectId": "9d2b2ec1-a465-431f-91d3-546f97b8fb26",
+                "name": "Managed Service Management"
             }
         },
         "serviceprincipal": {
             "billingReader": {
-                "objectId": "0d609922-5b59-4513-8be0-dda69d9ade0e",
+                "objectId": "770040c1-ddc2-40bd-bfc9-af70f5cc9ab1",
                 "name": "Service principal - http://billingreader"
             },
             "terraform": {
-                "objectId": "c824a33a-7b01-4571-a3c9-894d882fa2d6",
+                "objectId": "e11d5c66-9c16-488a-afce-fd4da574296d",
                 "name": "Service principal - http://terraform"
             }
         },
@@ -49,8 +45,8 @@
                 "maximumActivationDuration": "PT8H",
                 "managedByTenantApprovers": [
                     {
-                        "principalId": "[variables('securityGroup').approvers.objectId]",
-                        "principalIdDisplayName": "[variables('securityGroup').approvers.name]"
+                        "principalId": "[variables('securityGroup').management.objectId]",
+                        "principalIdDisplayName": "[variables('securityGroup').management.name]"
                     }
                 ]
             }
@@ -64,11 +60,11 @@
             "properties": {
                 "registrationDefinitionName": "[variables('name')]",
                 "description": "Virtual Machine protection and patching plus custom Azure billing service.",
-                "managedByTenantId": "655f0684-29ae-466e-8324-2ab22497254f",
+                "managedByTenantId": "3c584bbd-915f-4c70-9f2e-7217983f22f6",
                 "authorizations": [
                     {
-                        "principalIdDisplayName": "[variables('securityGroup').admins.name]",
-                        "principalId": "[variables('securityGroup').admins.objectId]",
+                        "principalIdDisplayName": "[variables('securityGroup').management.name]",
+                        "principalId": "[variables('securityGroup').management.objectId]",
                         "roleDefinitionId": "[variables('roleDefinitionId').ManagedServicesRegistrationAssignmentDeleteRole]"
                     },
                     {
